Simulate vuln method call when the app runs